# Climate-Finance-AI-Assistant

./: pyproject.toml
datacollection/: create_data.py  create_tables.py  fetch.py  scrape_and_store.py
frontend/: db.sqlite3
frontend/cfaa/: apps.py  data_calls.py  llm_calls.py  models.py  report_generator.py  scraper.py  urls.py  views.py
frontend/cfaa/migrations/: 0001_initial.py
frontend/cfaa/static/cfaa/css/: main.css
frontend/cfaa/templates/cfaa/: base.html  dashboard.html  discovery.html  report.html
frontend/frontend/: settings.py  urls.py
llm/: data_funcs.py  llm_calls.py  main.py
